# clicker

./: CMakeLists.txt  README.md
src/: controlpanel.cpp  controlpanel.h  gamecore.cpp  gamecore.h  gamefield.cpp  gamefield.h  goodbyedialog.cpp  goodbyedialog.h  main.cpp  mainwindow.cpp  mainwindow.h  statpanel.cpp  statpanel.h  togglingbutton.cpp  togglingbutton.h
